--- a/tienda/src/main/resources/templates/producto_form.html
+++ b/tienda/src/main/resources/templates/producto_form.html
@@ -17,15 +17,15 @@
         <div class="container-fluid m-5 contenedor">
 
             <!-- Enviamos la información a traves de un formulario mediante el metodo POST -->
-            <form class="formulario" th:action="@{/producto/registro/}" method="POST">
+            <form class="formulario" th:action="@{/producto/registro}" method="POST">
                 <div class="form-group my-3">
                     <label class="mb-2">Cargar Producto</label> 
-                    <input type="text" class="form-control" name="nombre" placeholder="Nombre del Producto">
+                    <input type="text" class="form-control" name="nombre" th:value="${nombre}" placeholder="Nombre del Producto">
 
                 </div>
 
                 <div class="form-group my-3">
-                    <input type="number" step="0.01" class="form-control" name="precio" placeholder="Precio del Producto">
+                    <input type="number" step="0.01" class="form-control" name="precio" th:value="${precio}" placeholder="Precio del Producto">
                 </div>
 
                 <div class="form-group my-3">
@@ -55,16 +55,13 @@
             </section>
         </div>
 
-        <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+        <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
             <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-
+                <h5 class="card-title">Exito 👍</h5>
                 <p class="card-text" th:text="${exito}"></p>
-
             </div>
         </div>
-
-        <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+        <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
             <div class="card-body">
                 <h5 class="card-title">Error 👎</h5>
                 <p class="card-text" th:text="${error}"></p>
