--- a/tienda/src/main/resources/templates/producto_lista.html
+++ b/tienda/src/main/resources/templates/producto_lista.html
@@ -35,7 +35,7 @@
                         <td th:text="${producto.nombre}"></td>
 
                         <td th:text="${producto.precio}"></td>
-                        
+
                         <td th:text="${producto.fabricante.nombre}"></td>
 
 
@@ -48,15 +48,15 @@
             </table>
 
             <!-- Porque no funciona la tarjeta de exito/error ? exito es nulo a pesar de que lo agrego con el modelo -->
-            <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+            <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
                 <div class="card-body">
-                    <h5 class="card-title">Exito ð</h5>
+                    <h5 class="card-title">Exito 👍</h5>
                     <p class="card-text" th:text="${exito}"></p>
                 </div>
-            </div>            
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+            </div>
+            <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
                 <div class="card-body">
-                    <h5 class="card-title">Error ð</h5>
+                    <h5 class="card-title">Error 👎</h5>
                     <p class="card-text" th:text="${error}"></p>
                 </div>
             </div>
