--- a/tienda/src/main/resources/templates/producto_lista_precio_min_max_seleccionar.html
+++ b/tienda/src/main/resources/templates/producto_lista_precio_min_max_seleccionar.html
@@ -14,8 +14,8 @@
         <nav th:replace="/fragments/navbar :: nav"></nav>
 
 
-        
-        
+
+
         <div class="container-fluid m-5 contenedor">
 
             <!-- Enviamos la información a traves de un formulario mediante el metodo POST -->
@@ -23,7 +23,7 @@
                 <div class="form-group my-3">
                     <label class="my-2">Seleccionar Precio Mínimo</label> 
                     <input type="number" step="0.01" class="form-control" name="precioMin" value="0" required>
-                    
+
                     <label class="my-2">Seleccionar Precio Máximo</label> 
                     <input type="number" step="0.01" class="form-control" name="precioMax" value="0" required>
                 </div>
@@ -39,23 +39,20 @@
                 </div>
             </section>
         </div>
-        
-        
-        
-        
-        
-        
 
-        <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+
+
+
+
+
+
+        <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
             <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-
+                <h5 class="card-title">Exito 👍</h5>
                 <p class="card-text" th:text="${exito}"></p>
-
             </div>
         </div>
-
-        <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+        <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
             <div class="card-body">
                 <h5 class="card-title">Error 👎</h5>
                 <p class="card-text" th:text="${error}"></p>
