--- a/tienda/src/main/resources/templates/producto_modificar.html
+++ b/tienda/src/main/resources/templates/producto_modificar.html
@@ -35,9 +35,9 @@
 
                     <label class="mb-2">Fabricante</label> 
                     <select name="codigoFabricante">
-                        
+
                         <option th:value="${producto?.fabricante.codigo}" selected>Seleccionar Fabricante</option>
-                        
+
                         <option th:each="fabricante : ${fabricantes}"
                                 th:value="${fabricante.codigo}"
                                 th:text="${fabricante.nombre}"
@@ -50,13 +50,13 @@
             </form>
 
             <!-- Porque no funciona la tarjeta de exito/error ? -->
-            <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+            <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
                 <div class="card-body">
                     <h5 class="card-title">Exito 👍</h5>
                     <p class="card-text" th:text="${exito}"></p>
                 </div>
             </div>
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+            <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
                 <div class="card-body">
                     <h5 class="card-title">Error 👎</h5>
                     <p class="card-text" th:text="${error}"></p>
