--- a/tienda/src/main/resources/templates/fabricante_form.html
+++ b/tienda/src/main/resources/templates/fabricante_form.html
@@ -21,9 +21,9 @@
             <form class="formulario" th:action="@{/fabricante/registro/}" method="POST">
                 <div class="form-group my-3">
                     <label class="mb-2">Cargar Fabricante</label> 
-                    
+
                     <input type="text" class="form-control" name="nombre" placeholder="Nombre del Fabricante">
-                    
+
                 </div>
 
                 <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
@@ -38,16 +38,13 @@
             </section>
         </div>
 
-        <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+        <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
             <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-
+                <h5 class="card-title">Exito 👍</h5>
                 <p class="card-text" th:text="${exito}"></p>
-
             </div>
         </div>
-
-        <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+        <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
             <div class="card-body">
                 <h5 class="card-title">Error 👎</h5>
                 <p class="card-text" th:text="${error}"></p>
