--- a/tienda/src/main/resources/templates/fabricante_modificar.html
+++ b/tienda/src/main/resources/templates/fabricante_modificar.html
@@ -15,29 +15,29 @@
         <div class="container-fluid m-5 contenedor">
 
             <!-- ${variable?.atributo} permite variable nula -->
+            <!--           ^                                 -->
             <form class="formulario" th:action="@{/fabricante/__${fabricante?.codigo}__}" method="POST">
 
-                <input hidden th:value="${codigo}" name="codigo">
 
                 <div class="form-group my-3">
 
                     <label class="mb-2">Cargar Fabricante</label> 
 
-                    <input th:value="${fabricante?.nombre}" type="text" class="form-control" name="nombre">
+                    <input th:value="${fabricante.nombre}" type="text" class="form-control" name="nombre">
                 </div>
 
                 <button type="submit" class="btn btn-primary mt-3 botones">Actualizar</button>
 
             </form>
 
-            <!-- Porque no funciona la tarjeta de exito/error ? -->
-            <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+            
+            <div th:if="${exito}!=null" class="card text-white bg-success my-3 mt-3 mensajeExito" >
                 <div class="card-body">
                     <h5 class="card-title">Exito 👍</h5>
                     <p class="card-text" th:text="${exito}"></p>
                 </div>
             </div>
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+            <div th:if="${error}!=null" class="card text-white bg-danger my-3 mensajeError" >
                 <div class="card-body">
                     <h5 class="card-title">Error 👎</h5>
                     <p class="card-text" th:text="${error}"></p>
