--- a/tienda/src/main/resources/templates/fabricante_modificar.html
+++ b/tienda/src/main/resources/templates/fabricante_modificar.html
@@ -16,7 +16,7 @@
 
             <!-- ${variable?.atributo} permite variable nula -->
             <!--           ^                                 -->
-            <form class="formulario" th:action="@{/fabricante/__${fabricante?.codigo}__}" method="POST">
+            <form class="formulario" th:action="@{/fabricante/__${fabricante.codigo}__}" method="POST">
 
 
                 <div class="form-group my-3">
