--- a/tienda/src/main/resources/templates/fragments/navbar.html
+++ b/tienda/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,8 @@
                     <li><hr class="dropdown-divider"></li>
 
                     <li><a class="dropdown-item" th:href="@{/producto/lista}">Listar Productos</a></li>
-                    
+                    <li><hr class="dropdown-divider"></li>
+
                     <li><a class="dropdown-item" th:href="@{/producto/lista/precio/seleccionar}">Buscar Productos Por Precio</a></li>
                 </ul>
             </li>
