buscar por fabricante agregado

--- a/tienda/src/main/resources/templates/fragments/navbar.html
+++ b/tienda/src/main/resources/templates/fragments/navbar.html
@@ -23,6 +23,10 @@
                     <li><hr class="dropdown-divider"></li>
 
                     <li><a class="dropdown-item" th:href="@{/producto/lista/precio/seleccionar}">Buscar Productos Por Precio</a></li>
+                    <li><hr class="dropdown-divider"></li>
+
+                    <li><a class="dropdown-item" th:href="@{/producto/lista/fabricante/seleccionar}">Buscar Productos Por Fabricante</a></li>
+
                 </ul>
             </li>
 
