--- a/tienda/src/main/resources/templates/fragments/navbar.html
+++ b/tienda/src/main/resources/templates/fragments/navbar.html
@@ -32,7 +32,7 @@
 
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Fabricantes
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
